--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password
+EMAIL_USER=aakashjaiswal8284@gmail.com
+EMAIL_PASSWORD=emzfxjfjretsbyai
