--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-flask==3.0.0
+Flask==3.0.0
 flask-sqlalchemy==3.1.1
 flask-bcrypt==1.0.1
-werkzeug==3.0.1
 flask-mail==0.9.1
+flask-cors==4.0.0
+Werkzeug==3.0.1
 itsdangerous==2.1.2
-datetime==5.4
+python-dotenv==1.0.0
 google-generativeai==0.3.2
-pillow==10.2.0
-gtts==2.5.1
+Pillow==10.2.0
+gTTS==2.5.1
 langdetect==1.0.9
 deep-translator==1.11.4
-flask-cors==4.0.0
-python-dotenv==1.0.1
-
+authlib==1.3.0
+click==8.1.7
+requests==2.31.0
